# cocapn-plato

./: .gitignore  CLI.md  FLEET.md  README.md  dashboard-v2.html  deploy.py  explorer.html  migrate.py  pyproject.toml
config/: supervisor-fleet.conf  systemd-fleet@.service
scripts/: cocapn-supervise.py  deploy-cocapn-plato.sh  fleet-orchestrator.py  fleet-restore.py  fleet-snapshot.py  fleet-webhook.py  grammar-audit.py  grammar-diagnose.sh  tile-pipeline.py  update-landing-stats.py
src/cocapn_plato/: __init__.py  cli.py  watch.py
src/cocapn_plato/engine/: __init__.py  engine.py  evolve.py  grammar.py  migrate.py  models.py  monitor.py  plato_bridge.py  query.py  queue.py  storage.py
src/cocapn_plato/sdk/: __init__.py  client.py  fleet.py  skills.py
src/cocapn_plato/server/: __init__.py  __main__.py  routes.py
tests/: test_benchmark.py  test_migrate.py  test_query.py  test_queue.py  test_watch.py
