[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocapn-plato"
version = "3.2.0"
description = "Cocapn Fleet PLATO engine — query API + SDK + bridge"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cocapn Fleet", email = "fleet@cocapn.ai"}
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.23.0",
]

[project.scripts]
cocapn = "cocapn_plato.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/cocapn-plato"
Repository = "https://github.com/SuperInstance/cocapn-plato"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
